Creado mediante Colaboratory

--- a/funciones/prody.ipynb
+++ b/funciones/prody.ipynb
@@ -1677,6 +1677,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#### Se hace un merge entre la base de gdp por países y el dataframe de RCA"
+      ],
+      "metadata": {
+        "id": "QWXEIEL83rp9"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# se hace un merge entre la base de gdp por países y el dataframe de RCA\n",
@@ -2017,7 +2026,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Se elabora un dataframe solo con la base de Ecuador"
+        "####Se elabora un dataframe solo con la base de Ecuador"
       ],
       "metadata": {
         "id": "UV3PdSW52XDx"
@@ -2030,12 +2039,12 @@
         "df_ec.sample(n=10)\n"
       ],
       "metadata": {
-        "id": "uEBrIL5W2dds",
-        "outputId": "eafa7224-76f8-461e-9eb7-69935de5e90d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
-        }
+        },
+        "id": "uEBrIL5W2dds",
+        "outputId": "eafa7224-76f8-461e-9eb7-69935de5e90d"
       },
       "execution_count": 179,
       "outputs": [
