Creado mediante Colaboratory

--- a/funciones/prody.ipynb
+++ b/funciones/prody.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "6Isicp7DOpc4",
         "outputId": "85f71b33-c7f1-45d3-dc83-4b7cbdcee393",
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "APR3b-BlOpc8",
         "outputId": "abfb1c4a-a6cc-4746-87f9-a75940edd3bc",
@@ -146,7 +146,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,7 +171,7 @@
           "height": 463
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -387,7 +387,7 @@
         "id": "nq2AXAV4r_n4",
         "outputId": "b3794ff5-2e03-4d35-b03b-1a17d3e6caed"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -446,7 +446,7 @@
       "metadata": {
         "id": "BhTl00k57h4G"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -467,7 +467,7 @@
           "height": 432
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -703,7 +703,7 @@
         "id": "NxHiKGv7r1XK",
         "outputId": "6f3032fb-b4f9-442e-c595-c3fb286ff155"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -741,7 +741,7 @@
           "height": 363
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -947,7 +947,7 @@
         "id": "-ik-idFWVhVY",
         "outputId": "ddf636c2-5a30-4fee-ebef-9243f985e15a"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -971,7 +971,7 @@
         "id": "VOetIB8pWZQP",
         "outputId": "ea01d6e9-5463-4d9c-d70c-b3fed31580dc"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1420,7 +1420,7 @@
         "id": "9zsPp6y6YOZQ",
         "outputId": "21bb0d11-803e-4797-d8f4-395bba62bde2"
       },
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1662,7 +1662,7 @@
         "id": "3VOGtaa3pb89",
         "outputId": "8e34222c-fa31-4f07-d856-74fcfb127230"
       },
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1704,7 +1704,7 @@
         "id": "ihr-Lo4hgte_",
         "outputId": "19ffb296-e12f-4c05-fce5-30695847a6a6"
       },
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1982,7 +1982,7 @@
         "id": "3hTpbiiqrkLT",
         "outputId": "b5b4dbce-9f5b-4c55-96e3-0ab3c91f7d7e"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2009,7 +2009,7 @@
         "id": "dO7T_1OfroFh",
         "outputId": "a34a592d-866f-4b63-b672-49d622829416"
       },
-      "execution_count": 170,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2046,7 +2046,7 @@
         "id": "uEBrIL5W2dds",
         "outputId": "eafa7224-76f8-461e-9eb7-69935de5e90d"
       },
-      "execution_count": 179,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2301,7 +2301,7 @@
       "metadata": {
         "id": "7ojnXxqG-TfN"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2317,7 +2317,7 @@
           "height": 363
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2504,7 +2504,7 @@
         "id": "vlr0Mli7Opc6"
       },
       "source": [
-        "The authors measure this sophistication indirectly by examining the wages of countries\n",
+        "According to *Hausmann Hwang & Rodrik’s (2005)*, the authors measure this sophistication indirectly by examining the wages of countries\n",
         "who are intensive exporters of each product. First, they measure the sophistication of each\n",
         "product, which they call PRODY, which is the revealed comparative advantage (RCA)-weighted\n",
         "GDP per capita of each country that exports the good:\n",
@@ -2521,12 +2521,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "This is a measure calculated as the GDP per\n",
+        "capita of countries that produce it, weighted by their revealed comparative advantage in\n",
+        "that product. As mentioned above, Hausmann Hwang & Rodrik use this product-level variable to calculate the level of sophistication of a country’s export basket, EXPYc,t as\n",
+        "the PRODYi,t for each component of the country’s export basket weighted by its share."
+      ],
+      "metadata": {
+        "id": "VO1AzAWI_H7C"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
         "id": "NzioStlaGejo"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     }
   ],
