Creado mediante Colaboratory

--- a/calc_coi.ipynb
+++ b/calc_coi.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "5WK2SgKgAAwg"
       ],
-      "authorship_tag": "ABX9TyO9bk05Forz5pSCH6AsTF6n",
+      "authorship_tag": "ABX9TyO6uGt40Bf4bT30+ykCWcMX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1407,23 +1407,23 @@
     {
       "cell_type": "code",
       "source": [
-        "d = {'country_name': ['Ecuador','Ecuador','Ecuador','Ecuador','Ecuador', 'Ecuador','Uruguay','Uruguay','Uruguay','Uruguay','Ecuador','Ecuador'],\n",
-        "     'product_name': ['petroleo', 'petroleo','petroleo','petroleo','mariscos','mariscos','carne','carne','carne','petroleo','plastico','plastico'],\n",
-        "     'dcp':[0.01,0.03,0.02,0.06,0.06,0.03,0.5,0.07,0.06,0.01,0.08,0.09],\n",
-        "     'Mcp': [1,1,1,1,1,1,1,1,1,0,0,0],\n",
-        "     'pci_p':[3.08,3.1,3.010,2.8,1.02,-0.08,0.5,0.3,-0.2,3.1,2.7,2]}\n",
+        "d = {'country_name': ['Ecuador','Ecuador','Ecuador','Ecuador','Ecuador', 'Ecuador','Uruguay','Uruguay','Uruguay','Uruguay','Ecuador','Ecuador','Ecuador'],\n",
+        "     'product_name': ['petroleo', 'petroleo','petroleo','petroleo','mariscos','mariscos','carne','carne','carne','petroleo','plastico','plastico','electronica'],\n",
+        "     'dcp':[0.01,0.03,0.02,0.06,0.06,0.03,0.5,0.07,0.06,0.01,0.08,0.09,0.01],\n",
+        "     'Mcp': [1,1,1,1,1,1,1,1,1,0,0,0,0],\n",
+        "     'pci_p':[3.08,3.1,3.010,2.8,1.02,-0.08,0.5,0.3,-0.2,3.1,2.7,2,-3.2]}\n",
         "df_tmp = pd.DataFrame(data=d)\n",
-        "df_tmp.head(12)"
+        "df_tmp.head(13)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 426
+          "height": 457
         },
         "id": "rNbVpvLEHxEk",
-        "outputId": "151ee46f-6664-49a9-bfa1-dabf2c38a50c"
+        "outputId": "e99e1386-3238-4813-cde4-5270caa8a109"
       },
-      "execution_count": 22,
+      "execution_count": 92,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1441,11 +1441,12 @@
               "8       Uruguay        carne  0.06    1  -0.20\n",
               "9       Uruguay     petroleo  0.01    0   3.10\n",
               "10      Ecuador     plastico  0.08    0   2.70\n",
-              "11      Ecuador     plastico  0.09    0   2.00"
+              "11      Ecuador     plastico  0.09    0   2.00\n",
+              "12      Ecuador  electronica  0.01    0  -3.20"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d9c7f7a0-4128-40a1-9a67-b397c7dc49db\">\n",
+              "  <div id=\"df-dbd27355-f6c1-4c47-81d0-735e90f0e07e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1569,10 +1570,18 @@
               "      <td>0</td>\n",
               "      <td>2.00</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>Ecuador</td>\n",
+              "      <td>electronica</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>0</td>\n",
+              "      <td>-3.20</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d9c7f7a0-4128-40a1-9a67-b397c7dc49db')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dbd27355-f6c1-4c47-81d0-735e90f0e07e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1623,12 +1632,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-d9c7f7a0-4128-40a1-9a67-b397c7dc49db button.colab-df-convert');\n",
+              "          document.querySelector('#df-dbd27355-f6c1-4c47-81d0-735e90f0e07e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-d9c7f7a0-4128-40a1-9a67-b397c7dc49db');\n",
+              "          const element = document.querySelector('#df-dbd27355-f6c1-4c47-81d0-735e90f0e07e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1651,7 +1660,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 92
         }
       ]
     },
@@ -1663,32 +1672,36 @@
         "             col_dcp=None,\n",
         "             col_pci=None,\n",
         "             col_mcp=None):\n",
-        "  \n",
+        "  \"En la siguiente función se realizará el cálculo de COI para cada país del dataframe\"\n",
         "  t_df = data.copy()\n",
         "\n",
-        "  g = data.groupby(['country_name','product_name'])\n",
         "  \n",
-        "\n",
+        "  #Se realiza el cálculo de propiedades\n",
         "  t_df['mcp_result']=t_df.apply( lambda x: (1 - x.Mcp),axis = 1)\n",
         "  t_df['pcip_result']=t_df.apply( lambda x: (x.mcp_result)*x.pci_p,axis = 1)\n",
         "  t_df['dcp_result']=t_df.apply( lambda x: (1-x.dcp),axis = 1)\n",
         "  t_df['coip_individual']=t_df.apply( lambda x: (x.dcp_result * x.pcip_result),axis = 1)\n",
-        "\n",
-        "  result_tmp = t_df.groupby('country_name')['product_name','coip_individual'].sum()\n",
-        "  t_df['coi_c'] = t_df.groupby('country_name')['product_name','coip_individual'].sum()\n",
-        "\n",
         "  \n",
+        "  # result_tmp = t_df.groupby(['country_name'], as_index=False)['coip_individual'].sum()\n",
         "\n",
         "\n",
-        "  # result = t_df.copy()\n",
-        "  result = result_tmp.copy()\n",
+        "  # Se realiza la suma por cada país.\n",
+        "  g = t_df['coip_individual'].groupby(t_df['country_name'], as_index=True )\n",
+        "\n",
+        "  t_df['coi_c'] = g.transform('sum')\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "  result = t_df.copy()\n",
+        "  # result = result_tmp.copy()\n",
         "  print(\"Cálculo realizado!\")\n",
         "  return result           \n"
       ],
       "metadata": {
         "id": "JXtMMEfULogp"
       },
-      "execution_count": 89,
+      "execution_count": 128,
       "outputs": []
     },
     {
@@ -1701,12 +1714,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 230
+          "height": 443
         },
         "id": "A6-IgKA9Ll46",
-        "outputId": "7a8461f6-f7cb-46f6-99f9-72c844653119"
+        "outputId": "b1770c04-afc8-4be6-8b0a-392349ad8420"
       },
-      "execution_count": 90,
+      "execution_count": 129,
       "outputs": [
         {
           "output_type": "stream",
@@ -1716,27 +1729,40 @@
           ]
         },
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-89-6bec3e4dfb43>:17: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
-            "  result_tmp = t_df.groupby('country_name')['product_name','coip_individual'].sum()\n",
-            "<ipython-input-89-6bec3e4dfb43>:18: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
-            "  t_df['coi_c'] = t_df.groupby('country_name')['product_name','coip_individual'].sum()\n"
-          ]
-        },
-        {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "              coip_individual\n",
-              "country_name                 \n",
-              "Ecuador                 4.304\n",
-              "Uruguay                 3.069"
+              "   country_name product_name   dcp  Mcp  pci_p  mcp_result  pcip_result  \\\n",
+              "0       Ecuador     petroleo  0.01    1   3.08           0          0.0   \n",
+              "1       Ecuador     petroleo  0.03    1   3.10           0          0.0   \n",
+              "2       Ecuador     petroleo  0.02    1   3.01           0          0.0   \n",
+              "3       Ecuador     petroleo  0.06    1   2.80           0          0.0   \n",
+              "4       Ecuador     mariscos  0.06    1   1.02           0          0.0   \n",
+              "5       Ecuador     mariscos  0.03    1  -0.08           0         -0.0   \n",
+              "6       Uruguay        carne  0.50    1   0.50           0          0.0   \n",
+              "7       Uruguay        carne  0.07    1   0.30           0          0.0   \n",
+              "8       Uruguay        carne  0.06    1  -0.20           0         -0.0   \n",
+              "9       Uruguay     petroleo  0.01    0   3.10           1          3.1   \n",
+              "10      Ecuador     plastico  0.08    0   2.70           1          2.7   \n",
+              "11      Ecuador     plastico  0.09    0   2.00           1          2.0   \n",
+              "\n",
+              "    dcp_result  coip_individual  coi_c  \n",
+              "0         0.99            0.000  1.136  \n",
+              "1         0.97            0.000  1.136  \n",
+              "2         0.98            0.000  1.136  \n",
+              "3         0.94            0.000  1.136  \n",
+              "4         0.94            0.000  1.136  \n",
+              "5         0.97           -0.000  1.136  \n",
+              "6         0.50            0.000  3.069  \n",
+              "7         0.93            0.000  3.069  \n",
+              "8         0.94           -0.000  3.069  \n",
+              "9         0.99            3.069  3.069  \n",
+              "10        0.92            2.484  1.136  \n",
+              "11        0.91            1.820  1.136  "
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-744b77ec-82ef-489d-8e91-78e2b82aee82\">\n",
+              "  <div id=\"df-19d5e6b5-2ad9-4efb-b460-27e5d2a93a5c\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -1756,26 +1782,179 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>coip_individual</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
               "      <th>country_name</th>\n",
-              "      <th></th>\n",
+              "      <th>product_name</th>\n",
+              "      <th>dcp</th>\n",
+              "      <th>Mcp</th>\n",
+              "      <th>pci_p</th>\n",
+              "      <th>mcp_result</th>\n",
+              "      <th>pcip_result</th>\n",
+              "      <th>dcp_result</th>\n",
+              "      <th>coip_individual</th>\n",
+              "      <th>coi_c</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>Ecuador</th>\n",
-              "      <td>4.304</td>\n",
+              "      <th>0</th>\n",
+              "      <td>Ecuador</td>\n",
+              "      <td>petroleo</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3.08</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.99</td>\n",
+              "      <td>0.000</td>\n",
+              "      <td>1.136</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>Uruguay</th>\n",
+              "      <th>1</th>\n",
+              "      <td>Ecuador</td>\n",
+              "      <td>petroleo</td>\n",
+              "      <td>0.03</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3.10</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.97</td>\n",
+              "      <td>0.000</td>\n",
+              "      <td>1.136</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Ecuador</td>\n",
+              "      <td>petroleo</td>\n",
+              "      <td>0.02</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3.01</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.98</td>\n",
+              "      <td>0.000</td>\n",
+              "      <td>1.136</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Ecuador</td>\n",
+              "      <td>petroleo</td>\n",
+              "      <td>0.06</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2.80</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.94</td>\n",
+              "      <td>0.000</td>\n",
+              "      <td>1.136</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Ecuador</td>\n",
+              "      <td>mariscos</td>\n",
+              "      <td>0.06</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1.02</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.94</td>\n",
+              "      <td>0.000</td>\n",
+              "      <td>1.136</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Ecuador</td>\n",
+              "      <td>mariscos</td>\n",
+              "      <td>0.03</td>\n",
+              "      <td>1</td>\n",
+              "      <td>-0.08</td>\n",
+              "      <td>0</td>\n",
+              "      <td>-0.0</td>\n",
+              "      <td>0.97</td>\n",
+              "      <td>-0.000</td>\n",
+              "      <td>1.136</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>Uruguay</td>\n",
+              "      <td>carne</td>\n",
+              "      <td>0.50</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.50</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.50</td>\n",
+              "      <td>0.000</td>\n",
               "      <td>3.069</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>Uruguay</td>\n",
+              "      <td>carne</td>\n",
+              "      <td>0.07</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.30</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.93</td>\n",
+              "      <td>0.000</td>\n",
+              "      <td>3.069</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>Uruguay</td>\n",
+              "      <td>carne</td>\n",
+              "      <td>0.06</td>\n",
+              "      <td>1</td>\n",
+              "      <td>-0.20</td>\n",
+              "      <td>0</td>\n",
+              "      <td>-0.0</td>\n",
+              "      <td>0.94</td>\n",
+              "      <td>-0.000</td>\n",
+              "      <td>3.069</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>Uruguay</td>\n",
+              "      <td>petroleo</td>\n",
+              "      <td>0.01</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3.10</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3.1</td>\n",
+              "      <td>0.99</td>\n",
+              "      <td>3.069</td>\n",
+              "      <td>3.069</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>Ecuador</td>\n",
+              "      <td>plastico</td>\n",
+              "      <td>0.08</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2.70</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2.7</td>\n",
+              "      <td>0.92</td>\n",
+              "      <td>2.484</td>\n",
+              "      <td>1.136</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>Ecuador</td>\n",
+              "      <td>plastico</td>\n",
+              "      <td>0.09</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2.00</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>0.91</td>\n",
+              "      <td>1.820</td>\n",
+              "      <td>1.136</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-744b77ec-82ef-489d-8e91-78e2b82aee82')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-19d5e6b5-2ad9-4efb-b460-27e5d2a93a5c')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -1826,12 +2005,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-744b77ec-82ef-489d-8e91-78e2b82aee82 button.colab-df-convert');\n",
+              "          document.querySelector('#df-19d5e6b5-2ad9-4efb-b460-27e5d2a93a5c button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-744b77ec-82ef-489d-8e91-78e2b82aee82');\n",
+              "          const element = document.querySelector('#df-19d5e6b5-2ad9-4efb-b460-27e5d2a93a5c');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1854,9 +2033,26 @@
             ]
           },
           "metadata": {},
-          "execution_count": 90
+          "execution_count": 129
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Resultados en la primera función:\n",
+        "\n",
+        "Ecuador:\t4.304\n",
+        "Uruguay:\t3.069\n",
+        "\n",
+        "### Resultados de la segunda función + agregando nuevo producto (a Ecuador) a la base:\n",
+        "\n",
+        "Ecuador:\t1.136\n",
+        "Uruguay:\t3.069"
+      ],
+      "metadata": {
+        "id": "bXvBm4tNcHi4"
+      }
     }
   ]
 }
