Creado mediante Colaboratory

--- a/analisis_mozambique/feasible_products_proposition_1.ipynb
+++ b/analisis_mozambique/feasible_products_proposition_1.ipynb
@@ -16243,6 +16243,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
+        "Gexqdzw-6xOB",
         "XxfzRi2v5bbd"
       ],
       "include_colab_link": true
